# aliyun-rust-sdk

./: .gitignore  Cargo.toml  README.md
api-docs/: actiontrail.json  alidns.json  arms.json  cas.json  cdn.json  cms.json  cr.json  cs.json  ddoscoo.json  dds.json  dysmsapi.json  eci.json  kms.json  nas.json  oss.json  r-kvstore.json  ram.json  rocketmq.json  slb.json  sls.json  sts.json  vpc.json
codegen/: __init__.py  download.py  generate_all.py  main.py  models.py  parser.py  rust_generator.py
crates/aliyun-actiontrail/: Cargo.toml
crates/aliyun-alidns/: Cargo.toml
crates/aliyun-arms/: Cargo.toml
crates/aliyun-cas/: Cargo.toml
crates/aliyun-cdn/: Cargo.toml
crates/aliyun-cms/: Cargo.toml
crates/aliyun-cr/: Cargo.toml
crates/aliyun-cs/: Cargo.toml
crates/aliyun-ddoscoo/: Cargo.toml
crates/aliyun-dds/: Cargo.toml
crates/aliyun-dysmsapi/: Cargo.toml
crates/aliyun-eci/: Cargo.toml
crates/aliyun-ecs/: Cargo.toml
crates/aliyun-kms/: Cargo.toml
crates/aliyun-nas/: Cargo.toml
crates/aliyun-oss/: Cargo.toml
crates/aliyun-r-kvstore/: Cargo.toml
crates/aliyun-ram/: Cargo.toml
crates/aliyun-rds/: Cargo.toml
crates/aliyun-rocketmq/: Cargo.toml
crates/aliyun-sdk-core/: Cargo.toml
crates/aliyun-slb/: Cargo.toml
crates/aliyun-sls/: Cargo.toml
crates/aliyun-sts/: Cargo.toml
crates/aliyun-vpc/: Cargo.toml
src/: error.rs  lib.rs
src/actiontrail/: api.rs  mod.rs  types.rs
src/alidns/: api.rs  mod.rs  types.rs
src/arms/: api.rs  mod.rs  types.rs
src/cas/: api.rs  mod.rs  types.rs
src/cdn/: api.rs  mod.rs  types.rs
(+128 files in other folders)
